# cmakeHelloWorld

./: .gitignore  CMakeLists.txt  cmakeConfig.h.in  main.cpp
